[package]
name = "osu-beatmap-preview"
version = "1.0.3"
edition = "2021"

[build-dependencies]
vergen = { version = "9", features = ["build"] }

[dependencies]
ureq = "2"
lexopt = "0.3"
serde_json = { version = "1", features = ["preserve_order"] }
gif = "0.13"
color_quant = "1.1"
png = "0.17"
rayon = "1"
font8x8 = "0.3"
thiserror = "2"
# Video (MP4/H.264) output. openh264 默认 `source` feature 把 Cisco 源码通过 cc
# crate 静态编译进二进制，保持「单文件无运行时依赖」；构建期需要 C++ 编译器。
openh264 = "0.9"
mp4 = "0.14"
bytes = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
